{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "8470a751-71a4-4362-9029-8ddbea30915c",
            "actions": [
                {
                    "name": "Mouvements",
                    "type": "Value",
                    "id": "018a1ba5-23ae-4131-909a-84fc40676a5a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tempo",
                    "type": "Value",
                    "id": "51191abd-b55b-46a9-a62c-00230df5e938",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "1be44d5b-78ab-4cd0-8e3a-feed457843a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "19caf939-a462-4f66-b680-f40ed7756bca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "20e217aa-ddac-45b2-a22b-d83e95d1584e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvements",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5b1a426c-9db9-41c4-84e8-d4ae784aab1c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "130419a1-2c56-4479-b40c-ad1579bc11ff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "14d8b611-5710-4e02-a704-c6b1c14cecad",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9c29ac22-ad9e-461b-bae7-15996f48aeb8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "2dedb988-70a8-43dd-9c6c-7880f6cc7113",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tempo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "9fd8c651-1b2d-4746-bd44-1ddfa84f512a",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tempo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "71c8fb1c-6dc0-4dfb-9f58-95d1ab55ea1e",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tempo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b809e004-7a65-468d-b8f9-2607baaf312a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5d0fb00-39bb-42b0-af1d-86376e638cd2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ConstructionMap",
            "id": "385efbe4-3c7b-4ce0-b35b-5d3d0be69d38",
            "actions": [
                {
                    "name": "TryPlaceBuilding",
                    "type": "Button",
                    "id": "b5286acf-c8e8-49d3-95df-a044a96babd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b01fc64-51d5-4507-b62d-0eadef4eb52a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TryPlaceBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI_Map",
            "id": "142959b4-b61f-42a7-af76-5b8a255d5296",
            "actions": [
                {
                    "name": "Tabulation",
                    "type": "Button",
                    "id": "e179963c-e72a-4c01-9495-0f461d635535",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TEMPO",
                    "type": "Value",
                    "id": "895d3569-e19d-4462-8c34-89c29786ff95",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "7724e1b1-0920-4bf4-b3f3-41adc8c8297d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "46d5c90a-382a-4063-b870-dd7ee63cf4d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R",
                    "type": "Button",
                    "id": "abc9a5e0-3477-434e-8f01-8890db2f7d2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "1",
                    "type": "Button",
                    "id": "f2c58011-3482-422f-8a7b-b7437de8ac60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "2",
                    "type": "Button",
                    "id": "28905137-7235-4b5b-9154-62281250856b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "3",
                    "type": "Button",
                    "id": "993b041e-5639-4fa1-83b1-81564311751a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "4",
                    "type": "Button",
                    "id": "9a34efe0-596c-43b4-a50e-7ef1d8e324cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "5",
                    "type": "Button",
                    "id": "55539d68-bbaa-4b0f-ab8a-42af48ba5752",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "6",
                    "type": "Button",
                    "id": "09fac722-81d1-4ad8-8b3d-3f343656b309",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "7",
                    "type": "Button",
                    "id": "e48f0d15-0357-49ff-9be2-f2b201d1ecef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c3dbf2df-5c42-4c93-9e0d-5d0221d3b1a4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TEMPO",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3828e001-52fa-43c1-81f2-b7ba36a7c461",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TEMPO",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2b583999-9b4e-4c9e-95e8-94cf2bbf1dc8",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TEMPO",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1c0bb09f-cd50-4f22-9545-ecf975bc6056",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tabulation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f62a0af3-5dda-4d23-94ec-fba8cd3a9a3d",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2181a2f5-21e7-4c10-af08-62c00717b0f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d754309d-0bcf-4639-b289-bc31daa13738",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d1a99d4-61f1-42fe-9eae-175b7d5bbf91",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "027eca86-06e1-4493-bebc-964a53e48be5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64c1d0eb-1913-4760-b002-f651d6fbbeea",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b13d5a-69b3-4356-9871-5d9619070455",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf19490-f08b-4eb4-8324-0b91da369163",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e141af9a-9ce7-4027-8207-c5c03f49d429",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d21f4ab5-692b-4e2e-b575-8ebd6505f9a8",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "7",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}